--- a/src/components/NavbarButton.css
+++ b/src/components/NavbarButton.css
@@ -3,6 +3,7 @@
     position: relative;
     overflow: hidden;
     border-radius: 10px;
+    margin-left: 5%;
 }
 
 .navbarButton:hover .buttonBackground {
